# cchooks

./: README.md  example.json  example_claude_settings.json  justfile  pyproject.toml
.kiro/specs/claude-hook-library/: design.md  requirements.md  tasks.md
.kiro/specs/generic-hook-handler/: design.md  requirements.md  tasks.md
src/cchooks/: __init__.py  constants.py  core.py  exceptions.py  hooks.py  validators.py
src/cchooks/handlers/: __init__.py  notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
tests/: integration_test_hooks.py  test_comprehensive_suite.py  test_constants.py  test_core.py  test_error_handling_logging.py  test_exceptions.py  test_import.py  test_suite_summary.md  test_validators.py
