[project]
name = "cchooks"
version = "0.1.0"
description = "Claude Code Hooks - A library for handling Claude Code hook events"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.4.1"]

[project.scripts]
cchooks = "cchooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cchooks"]
