[project]
name = "cchooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ken Banks", email = "kenbanks.peng@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "kb-cchook>=0.1.0",
]
optional-dependencies = { dev = ["pytest>=8.4.1"] }

[project.scripts]
cchooks = "cchooks:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
